--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,38 +12,43 @@
 <body>
 
     <div class="header">
-        Header Logo
+        <div class="logo"><img src="images/fontaine.webp" width="40" height="40">Furina de Fontaine</div>
         <ul class="header-items">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="https://www.youtube.com/">Teyvat Tours</a></li>
+            <li><a href="https://www.google.com/">FAQs</a></li>
+            <li><a href="https://www.twitter.com/">About Us</a></li>
         </ul>
+        <button class="hamburger">=</button>
     </div>
 
     <div class="section-one">
-        <h1>This Website is Awesome!</h1>
-        <p>Some Random Text I'm Too Lazy to Write Down.</p>
-        <button>Sign up</button>
-        <img src="" alt="placeholder image found here." width="500", height="500">
+        <div class="signup-hero">
+            <div class="hero-text">Let my name echo in song!</div>
+            <div class="hero-subtext">Why are you just standing there with your mouth gaping? Ah, you must be stunned and at a loss for words... Understandable, it is I after all... Fontaine's most beloved star, Furina. I'm on a very tight schedule, so you're lucky to even get an appointment with me.</div>
+            <button class="hero-button">Sign up</button>
+        </div>
+        <img src="/images/Furina.jpg" alt="placeholder image found here." width="426", height="240">
     </div>
 
     <div class="section-two">
         Some Random Information
-        <div class="box-one">
-            <div class="box"></div>
-            this is some subtext
-        </div>
-        <div class="box-two">
-            <div class="box"></div>
-            this is some subtext
-        </div>
-        <div class="box-three">
-            <div class="box"></div>
-            this is some subtext
-        </div>
-        <div class="box-four">
-            <div class="box"></div>
-            this is some subtext
+        <div class="boxes">
+            <div class="box-subtext">
+                <div class="box"></div>
+                this is some subtext under an illustration of an image
+            </div>
+            <div class="box-subtext">
+                <div class="box"></div>
+                this is some subtext under an illustration of an image
+            </div>
+            <div class="box-subtext">
+                <div class="box"></div>
+                this is some subtext under an illustration of an image
+            </div>
+            <div class="box-subtext">
+                <div class="box"></div>
+                this is some subtext under an illustration of an image
+            </div>
         </div>
     </div>
 
