Finished More Information and Quote segments

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
     </div>
 
     <div class="section-three">
-        <p>Some random quote lmao</p>
-        <p>author<p>
+        <div class="quote-container">
+            <div class="quote">I didn't know you cared so much about me. Does that mean that you still need my power? But given the way I am now... there's a chance I won't be able to give you everything you need. Hmm? All you really care about is... me? In that case, then let us act out our future journey together!</div>
+            <div class="quote-author">- Furina, THE Hydro Archon.</div>
+        </div>
     </div>
 
-    <div class="section-five">
+    <div class="section-four">
         <div class="call-to-action">
             <p>Call to Action Time!</p>
             <p>Sign up for something I don't know really</p>
