--- a/index.html
+++ b/index.html
@@ -31,23 +31,35 @@
     </div>
 
     <div class="section-two">
-        Some Random Information
+        Furina's Talents
         <div class="boxes">
             <div class="box-subtext">
                 <div class="box"></div>
-                this is some subtext under an illustration of an image
+                <div class="talent">
+                    Soloist's Solicitation
+                </div>
+                This is Furina's Normal Attack. Charging this attack changes Furina's Arkhe.
             </div>
             <div class="box-subtext">
                 <div class="box"></div>
-                this is some subtext under an illustration of an image
+                <div class="talent">
+                    Salon Solitaire
+                </div>
+                In Ousia mode, summon three foaming bubble like celebrants to deal massive AoE Hydro Damage. In Pneuma mode, summon the Singer of Many Waters, who will heal nearby active.
             </div>
             <div class="box-subtext">
                 <div class="box"></div>
-                this is some subtext under an illustration of an image
+                <div class="talent">
+                Let the People Rejoice
+                </div>
+                Furina will increase the DMG dealt by and Incoming Healing Bonus of all nearby party members based on the amount of Fanfare she has which can be obtained by gaining or losing a percent of HP.
             </div>
             <div class="box-subtext">
                 <div class="box"></div>
-                this is some subtext under an illustration of an image
+                <div class="talent">
+                    Endless Waltz
+                </div>
+                Allows healing to overflow if the source is not Furina herself.
             </div>
         </div>
     </div>
