Added Footer and Call to Action

--- a/index.html
+++ b/index.html
@@ -73,14 +73,19 @@
 
     <div class="section-four">
         <div class="call-to-action">
-            <p>Call to Action Time!</p>
-            <p>Sign up for something I don't know really</p>
-            <button>Sign up</button>
+            <div class="cto-text-container">
+                <div class="cto-header">Time to Shine!</div>
+                <div class="cto-text">Sign up to become of the worshippers of The Hydro Archon!</div>
+            </div>
+            <button class="cto-button">Sign up</button>
         </div>
     </div>
 
     <div class="footer">
-        Copyright @ NiTzuA 2024
+        <div class="footer-container">
+            <div class = "mycredits">Made by NiTzuA in 2024</div>
+            <div class = "imagecredits">Images from COGNOSPHERE PTE. LTD.</div>
+        </div>
     </div>
 
 </body>
