Finished Odin Landing Page! :)

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="header">
         <div class="logo"><img src="images/fontaine.webp" width="40" height="40">Furina de Fontaine</div>
         <ul class="header-items">
-            <li><a href="https://www.youtube.com/">Teyvat Tours</a></li>
-            <li><a href="https://www.google.com/">FAQs</a></li>
-            <li><a href="https://www.twitter.com/">About Us</a></li>
+            <li><a href="https://www.youtube.com/watch?v=EN79SfbcvIE">Teyvat Tours</a></li>
+            <li><a href="https://www.youtube.com/watch?v=EN79SfbcvIE">FAQs</a></li>
+            <li><a href="https://www.youtube.com/watch?v=EN79SfbcvIE">About Us</a></li>
         </ul>
         <button class="hamburger">=</button>
     </div>
@@ -25,7 +25,7 @@
         <div class="signup-hero">
             <div class="hero-text">Let my name echo in song!</div>
             <div class="hero-subtext">Why are you just standing there with your mouth gaping? Ah, you must be stunned and at a loss for words... Understandable, it is I after all... Fontaine's most beloved star, Furina. I'm on a very tight schedule, so you're lucky to even get an appointment with me.</div>
-            <button class="hero-button">Sign up</button>
+            <button class="hero-button" onclick="window.location.href='https://www.youtube.com/watch?v=EN79SfbcvIE';">Sign up</button>
         </div>
         <img src="/images/Furina.jpg" alt="placeholder image found here." width="426", height="240">
     </div>
@@ -34,28 +34,28 @@
         Furina's Talents
         <div class="boxes">
             <div class="box-subtext">
-                <div class="box"></div>
+                <div class="box"><img src="images/furinaNA.webp" width="150" height="150"></div>
                 <div class="talent">
                     Soloist's Solicitation
                 </div>
                 This is Furina's Normal Attack. Charging this attack changes Furina's Arkhe.
             </div>
             <div class="box-subtext">
-                <div class="box"></div>
+                <div class="box"><img src="images/furinaES.webp" width="150" height="150"></div>
                 <div class="talent">
                     Salon Solitaire
                 </div>
                 In Ousia mode, summon three foaming bubble like celebrants to deal massive AoE Hydro Damage. In Pneuma mode, summon the Singer of Many Waters, who will heal nearby active.
             </div>
             <div class="box-subtext">
-                <div class="box"></div>
+                <div class="box"><img src="images/furinaEB.webp" width="150" height="150"></div>
                 <div class="talent">
                 Let the People Rejoice
                 </div>
                 Furina will increase the DMG dealt by and Incoming Healing Bonus of all nearby party members based on the amount of Fanfare she has which can be obtained by gaining or losing a percent of HP.
             </div>
             <div class="box-subtext">
-                <div class="box"></div>
+                <div class="box"><img src="images/furinaA1.webp" width="150" height="150"></div>
                 <div class="talent">
                     Endless Waltz
                 </div>
@@ -77,7 +77,7 @@
                 <div class="cto-header">Time to Shine!</div>
                 <div class="cto-text">Sign up to become of the worshippers of The Hydro Archon!</div>
             </div>
-            <button class="cto-button">Sign up</button>
+            <button class="cto-button" onclick="window.location.href='https://www.youtube.com/watch?v=EN79SfbcvIE';">Sign up</button>
         </div>
     </div>
 
