--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="hero-subtext">Why are you just standing there with your mouth gaping? Ah, you must be stunned and at a loss for words... Understandable, it is I after all... Fontaine's most beloved star, Furina. I'm on a very tight schedule, so you're lucky to even get an appointment with me.</div>
             <button class="hero-button" onclick="window.location.href='https://www.youtube.com/watch?v=EN79SfbcvIE';">Sign up</button>
         </div>
-        <img src="/images/furina.jpg" alt="placeholder image found here." width="426", height="240">
+        <img src="images/furina.jpg" alt="placeholder image found here." width="426", height="240">
     </div>
 
     <div class="section-two">
